--- a/app/src/main/res/drawable/zhy_button_bg_check_2.xml
+++ b/app/src/main/res/drawable/zhy_button_bg_check_2.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <solid
-        android:color="@color/zhy_text_color_1" />
+        android:color="@color/zhy_rb_check_1" />
 </shape>
