--- a/app/src/main/res/layout/activity_customer_help.xml
+++ b/app/src/main/res/layout/activity_customer_help.xml
@@ -1,13 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_customer_help"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/zhy_backgroud_1"
+    android:orientation="vertical"
     tools:context="com.shian.shianlife.activity.CustomerHelpActivity">
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_132dp"
+            android:background="@color/white"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:id="@+id/ll_linehelp"
+                android:layout_width="@dimen/dimen_0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/zhy_button_state_ll_white"
+                android:gravity="center">
+
+                <ImageView
+                    android:layout_width="@dimen/dimen_50dp"
+                    android:layout_height="@dimen/dimen_50dp"
+                    android:layout_marginRight="@dimen/dimen_24dp"
+                    android:src="@drawable/zhy_help_line" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dimen_24dp"
+                    android:text="在线客服"
+                    android:textColor="@color/zhy_text_color_1"
+                    android:textSize="@dimen/dimen_32dp" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="@dimen/dimen_1dp"
+                android:layout_height="@dimen/dimen_100dp"
+                android:layout_gravity="center"
+                android:background="@color/zhy_text_color_2"></TextView>
+
+            <LinearLayout
+                android:id="@+id/ll_phonehelp"
+                android:layout_width="@dimen/dimen_0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/zhy_button_state_ll_white"
+                android:gravity="center">
+
+                <ImageView
+                    android:layout_width="@dimen/dimen_50dp"
+                    android:layout_height="@dimen/dimen_50dp"
+                    android:layout_marginRight="@dimen/dimen_24dp"
+                    android:src="@drawable/zhy_help_phone" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dimen_24dp"
+                    android:text="在线客服"
+                    android:textColor="@color/zhy_text_color_1"
+                    android:textSize="@dimen/dimen_32dp" />
+            </LinearLayout>
+        </LinearLayout>
+
+
+        <com.shian.shianlife.view.ScrollGridView
+            android:id="@+id/gridview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dimen_16dp"
+            android:background="@color/white"
+            android:numColumns="3"></com.shian.shianlife.view.ScrollGridView>
+
+        <com.shian.shianlife.view.customview.HelpHotIssue
+            android:layout_marginTop="@dimen/dimen_16dp"
+            android:id="@+id/help_hotissue"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></com.shian.shianlife.view.customview.HelpHotIssue>
+    </LinearLayout>
+
+
+</ScrollView>
