--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -127,6 +127,7 @@
     </LinearLayout>
 
     <ImageView
+        android:id="@+id/iv_buildnew"
         android:layout_marginBottom="@dimen/dimen_28dp"
         android:layout_width="@dimen/dimen_100dp"
         android:layout_height="@dimen/dimen_100dp"
