--- a/app/src/main/res/layout/view_order_qt.xml
+++ b/app/src/main/res/layout/view_order_qt.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/zhy_text_color_3"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -14,9 +15,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/dimen_100dp"
             android:text="什么订单也没有，\n赶快新建订单吧!"
-            android:textColor="@color/text_color"
+            android:textColor="@color/white"
             android:textSize="@dimen/dimen_40dp" />
 
         <TextView
@@ -25,13 +25,13 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerInParent="true"
-            android:padding="@dimen/dimen_10dp"
             android:layout_marginBottom="@dimen/dimen_50dp"
-            android:background="@drawable/ic_home_reg"
+            android:background="@drawable/zhy_button_state_5"
             android:gravity="center"
+            android:padding="@dimen/dimen_10dp"
             android:text="马上新建"
-            android:textColor="@color/text_color"
-            android:textSize="@dimen/dimen_40dp" />
+            android:textColor="@color/white"
+            android:textSize="@dimen/dimen_32dp" />
     </RelativeLayout>
 
     <LinearLayout
@@ -42,30 +42,35 @@
 
         <TextView
             android:id="@+id/tv_neworder1"
-            android:layout_gravity="center"
             android:layout_width="wrap_content"
-            android:padding="@dimen/dimen_10dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginTop="@dimen/dimen_10dp"
             android:background="@drawable/ic_home_reg"
             android:gravity="center"
+            android:padding="@dimen/dimen_10dp"
             android:text="+新建服务单"
             android:textColor="@color/text_color"
             android:textSize="@dimen/dimen_40dp"
-         />
+            android:visibility="gone" />
 
         <android.support.v4.widget.SwipeRefreshLayout
+            android:layout_marginTop="@dimen/dimen_16dp"
             android:id="@+id/sryt_swipe_listview"
+            android:layout_marginRight="@dimen/dimen_16dp"
+            android:layout_marginLeft="@dimen/dimen_16dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+
             <ListView
+                android:scrollbars="none"
                 android:id="@+id/lv_swipe_listview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:choiceMode="singleChoice"
-                android:divider="@null"
-                android:dividerHeight="0dp"
+                android:divider="@color/zhy_text_color_3"
+                android:dividerHeight="@dimen/dimen_16dp"
                 android:fadingEdge="none"
                 android:scrollbarStyle="outsideOverlay" />
         </android.support.v4.widget.SwipeRefreshLayout>
