--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -53,6 +53,7 @@
     <color name="zhy_text_color_7">#FFDA76</color>
     <color name="zhy_text_color_8">#A2A2A2</color>
     <color name="zhy_text_color_9">#6d8780</color>
+    <color name="zhy_text_color_10">#ffa592</color>
     <color name="zhy_title_color_1">#3baf92</color>
     <color name="zhy_rb_check_1">#ededed</color>
     <color name="zhy_rb_uncheck_1">#dedede</color>
