--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,12 +29,14 @@
     <style name="CustomTabPageIndicator" parent="Widget.TabPageIndicator">
         <item name="android:background">@drawable/tab_indicator</item>
         <item name="android:textAppearance">@style/CustomTabPageIndicator.Text</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">@dimen/dimen_24dp</item>
         <item name="android:textColor">@drawable/viewpager_title_textcolor</item>
         <item name="android:dividerPadding">8dp</item>
         <item name="android:showDividers">middle</item>
-        <item name="android:paddingLeft">10dp</item>
-        <item name="android:paddingRight">10dp</item>
+        <item name="android:paddingLeft">16dp</item>
+        <item name="android:paddingRight">16dp</item>
+        <item name="android:layout_marginLeft">@dimen/dimen_37dp</item>
+        <item name="android:layout_marginRight">@dimen/dimen_37dp</item>
         <item name="android:fadingEdge">horizontal</item>
         <item name="android:fadingEdgeLength">8dp</item>
     </style>
