--- a/app/src/main/res/values/widget.xml
+++ b/app/src/main/res/values/widget.xml
@@ -2,21 +2,21 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <style name="orderlist_item_title_textStyle" parent="@android:style/Widget.TextView">
-        <item name="android:textColor">#000000</item>
-        <item name="android:textSize">@dimen/txtsize_30sp</item>
+        <item name="android:textColor">#696969</item>
+        <item name="android:textSize">@dimen/txtsize_24sp</item>
         <item name="android:minEms">6</item>
     </style>
 
     <style name="orderlist_item_content_textStyle" parent="@android:style/Widget.TextView">
-        <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">@dimen/txtsize_25sp</item>
+        <item name="android:textColor">@color/zhy_text_color_9</item>
+        <item name="android:textSize">@dimen/txtsize_24sp</item>
         <item name="android:singleLine">true</item>
         <item name="android:ellipsize">end</item>
     </style>
 
     <style name="orderlist_item_btn_textStyle" parent="@android:style/Widget.TextView">
         <item name="android:textColor">#7b5237</item>
-         <item name="android:textSize">@dimen/txtsize_20sp</item>
+         <item name="android:textSize">@dimen/dimen_24dp</item>
         <item name="android:gravity">center</item>
         <item name="android:background">@drawable/bg_orderlist_item_btn</item>
         <item name="android:layout_gravity">center</item>
