--- a/app/src/main/res/layout/dialog_tips.xml
+++ b/app/src/main/res/layout/dialog_tips.xml
@@ -6,6 +6,12 @@
     android:orientation="vertical">
 
     <TextView
+        android:text="确认提交？"
+        android:id="@+id/tv_top"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
         android:id="@+id/tv_title"
         android:layout_width="match_parent"
         android:layout_height="0dp"
