--- a/app/src/main/res/layout/view_item_qt.xml
+++ b/app/src/main/res/layout/view_item_qt.xml
@@ -236,6 +236,7 @@
         android:gravity="center"
         android:orientation="horizontal">
 
+
         <FrameLayout
             android:id="@+id/fl_accept"
             android:layout_width="@dimen/dimen_133dp"
@@ -270,6 +271,31 @@
                 android:textColor="@color/zhy_text_color_1" />
         </FrameLayout>
 
+        <FrameLayout
+            android:id="@+id/fl_shift"
+            android:layout_width="@dimen/dimen_170dp"
+            android:layout_height="@dimen/dimen_66dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="@dimen/dimen_14dp"
+            android:layout_marginRight="@dimen/dimen_14dp">
+
+            <ImageView
+                android:id="@+id/iv_data"
+                android:layout_width="@dimen/dimen_35dp"
+                android:layout_height="@dimen/dimen_35dp"
+                android:layout_gravity="left|top"
+                android:src="@drawable/tishi" />
+
+            <TextView
+                android:id="@+id/tv_waitservice"
+                style="@style/orderlist_item_btn_textStyle"
+                android:layout_width="@dimen/dimen_133dp"
+                android:layout_height="@dimen/dimen_66dp"
+                android:layout_gravity="right"
+                android:background="@drawable/zhy_button_state_5"
+                android:text="及时服务"
+                android:textColor="@color/white" />
+        </FrameLayout>
 
         <FrameLayout
             android:id="@+id/fl_edit"
@@ -320,8 +346,8 @@
             <TextView
                 android:id="@+id/tv_pay"
                 style="@style/orderlist_item_btn_textStyle"
-                android:layout_width="@dimen/dimen_200dp"
-                android:layout_height="@dimen/dimen_60dp"
+                android:layout_width="@dimen/dimen_133dp"
+                android:layout_height="@dimen/dimen_66dp"
                 android:background="@drawable/zhy_button_state_5"
                 android:text="支付定金"
                 android:textColor="@color/white" />
@@ -363,30 +389,6 @@
                 android:textColor="@color/zhy_text_color_1" />
         </FrameLayout>
 
-        <FrameLayout
-            android:id="@+id/fl_shift"
-            android:layout_width="@dimen/dimen_133dp"
-            android:layout_height="@dimen/dimen_66dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="@dimen/dimen_14dp"
-            android:layout_marginRight="@dimen/dimen_14dp">
-
-            <TextView
-                android:id="@+id/tv_waitservice"
-                style="@style/orderlist_item_btn_textStyle"
-                android:layout_width="@dimen/dimen_133dp"
-                android:layout_height="@dimen/dimen_66dp"
-                android:background="@drawable/zhy_button_state_5"
-                android:text="及时服务"
-                android:textColor="@color/white" />
-
-            <ImageView
-                android:id="@+id/iv_data"
-                android:layout_width="@dimen/dimen_40dp"
-                android:layout_height="@dimen/dimen_40dp"
-                android:layout_gravity="right|center"
-                android:src="@drawable/tishi" />
-        </FrameLayout>
 
         <FrameLayout
             android:id="@+id/fl_create"
@@ -415,13 +417,13 @@
             android:layout_marginRight="@dimen/dimen_14dp">
 
             <TextView
-                android:background="@drawable/zhy_button_state_2"
-                android:textColor="@color/zhy_text_color_1"
                 android:id="@+id/tv_close"
                 style="@style/orderlist_item_btn_textStyle"
                 android:layout_width="@dimen/dimen_133dp"
                 android:layout_height="@dimen/dimen_66dp"
-                android:text="结束洽谈" />
+                android:background="@drawable/zhy_button_state_5"
+                android:text="结束洽谈"
+                android:textColor="@color/white" />
         </FrameLayout>
     </LinearLayout>
 
